I made dashboard updates

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -88,7 +88,7 @@
 	    if (!error && result && result.event === "success") { 
 	       console.log('Done! Here is the image info: ' + result.info.url); 
 	       let url = result.info.url;
-	       document.getElementById('product_image').value = url;
+	       document.getElementById('productImage').value = url;
 	       //console.log(url);
 	       return url;
 	    }
