--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,10 @@
-
- 
+<style>
+  @media only screen and (max-width: 500px) {
+    .mobile-hide {
+      display: none;
+    }
+  }
+</style>
 
 
 
@@ -31,7 +36,7 @@
             <i class="fab fa-twitter white-text mr-4"> </i>
           </a>
           <!--Instagram-->
-          <a class="ins-ic"  href="">
+          <a class="ins-ic" href="">
             <i class="fab fa-instagram white-text"> </i>
           </a>
 
@@ -56,14 +61,16 @@
         <!-- Content -->
         <h6 class="text-uppercase font-weight-bold">Company name</h6>
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>Creativity helps stores stand out. Whogobuyam is doing something different that can help your bottom line a lot.We offer unique products awesome of collections of online stores that stands out in the crowd and make our products best suits you.
+        <p>Creativity helps stores stand out. Whogobuyam is doing something different that can help your bottom line a
+          lot.We offer unique products awesome of collections of online stores that stands out in the crowd and make our
+          products best suits you.
         </p>
 
       </div>
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 mobile-hide">
 
         <!-- Links -->
         <h6 class="text-uppercase font-weight-bold">Products</h6>
@@ -85,22 +92,22 @@
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 mobile-hide">
 
         <!-- Links -->
         <h6 class="text-uppercase font-weight-bold">Useful links</h6>
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <a href="#!">Your Account</a>
+          <a href="/">Your Account</a>
         </p>
         <p>
-          <a href="#!">Become an Affiliate</a>
+          <a href="/">Become an Affiliate</a>
         </p>
         <p>
-          <a href="#!">Shipping Rates</a>
+          <a href="/">Shipping Rates</a>
         </p>
         <p>
-          <a href="#!">Help</a>
+          <a href="/">Help</a>
         </p>
 
       </div>
@@ -113,13 +120,13 @@
         <h6 class="text-uppercase font-weight-bold">Contact</h6>
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+          <i class="fas fa-home mr-3"></i> Zeezah Hub, Osogbo</p>
         <p>
-          <i class="fas fa-envelope mr-3"></i> info@whogobuyam.com<</p>
+          <i class="fas fa-envelope mr-3"></i> info@whogobuyam.com</p>
         <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+          <i class="fas fa-phone mr-3"></i> +(234) 816 942 5505</p>
         <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          <i class="fas fa-print mr-3"></i> +(234) 816 942 5505</p>
 
       </div>
       <!-- Grid column -->
@@ -131,8 +138,12 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2018 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">©
+    <script type="text/javascript">
+      document.write(new Date().getFullYear());
+    </script>
+    Copyright:
+    <a href="/"> Whogobuyam.com</a>
   </div>
   <!-- Copyright -->
 
